log
Sun Mar 20 02:19:58 UTC 2022: 
 tests:  0|6
total_score: 0/70
47eed84
Sun Mar 20 02:25:18 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d13d8e8
Sun Mar 20 02:33:59 UTC 2022: 
 list.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
 tests:  0|0
753022a
Sun Mar 20 02:36:40 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:27: error: ‘List {aka struct List}’ has no member named ‘data’
     void* dato=(void*)list->data;
                           ^~
Compilation failed
014cc8a
Sun Mar 20 02:37:01 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4672309
Sun Mar 20 02:38:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:16: error: initialization discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
     void* dato=(const void*)list->head->data;
                ^
cc1: all warnings being treated as errors
Compilation failed
61a19ad
Sun Mar 20 02:39:00 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:16: error: void value not ignored as it ought to be
     void* dato=(void)list->head->data;
                ^
Compilation failed
cc9764f
